# Poptify

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build-deb.yml  release.yml
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/web/: app.js  index.html  styles.css
android/app/src/main/java/com/poptify/app/: BootReceiver.kt  LockScreenActivity.kt  LockService.kt  MainActivity.kt  Spotify.kt  WebPlayer.kt
android/app/src/main/res/values/: strings.xml  themes.xml
design/: mascot-svg.html  mascot.html  poppy.lottie.json  prototype.html
docs/: index.html
landing/: index.html
mascot-lottie/: package-lock.json
src/: crt.js  hydra 2.js  hydra.js  main.js  soundcloud.js  styles.css  youtube.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  spotify.rs
