[package]
name = "poptify"
version = "0.1.0"
description = "Floating Spotify now-playing popup"
authors = ["Markel Alvarado"]
edition = "2021"

[lib]
name = "poptify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2"
dirs = "5"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
